// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/DexPage/actions/checkTimeoutEvent should checkTimeoutEvent should create checkTimeoutEvent action 1`] = `
Object {
  "type": "atomicapp/DexPage/CHECK_TIMEOUT_EVENT",
}
`;

exports[`containers/DexPage/actions/checkUpdateSwapEvent should checkUpdateSwapEvent should create checkUpdateSwapEvent action 1`] = `
Object {
  "type": "atomicapp/DexPage/CHECK_UPDATE_SWAP_EVENT",
}
`;

exports[`containers/DexPage/actions/closeDetailModal should closeDetailModal should create closeDetailModal action 1`] = `
Object {
  "type": "atomicapp/DexPage/SWAP_DETAIL_MODAL_CLOSE",
}
`;

exports[`containers/DexPage/actions/closeJoyride should closeJoyride should create closeJoyride action 1`] = `
Object {
  "type": "atomicapp/DexPage/JOYRIDE_CLOSE",
}
`;

exports[`containers/DexPage/actions/loadBestPrice should loadBestPrice should create loadBestPrice action 1`] = `
Object {
  "payload": Object {
    "address": "",
    "age": 0,
    "avevolume": 0,
    "base": "COQUI",
    "bestPrice": 0,
    "depth": 0,
    "maxvolume": 0,
    "numutxos": 0,
    "price": 0,
    "pubkey": "",
    "rel": "PIZZA",
    "zcredits": 0,
  },
  "type": "atomicapp/DexPage/LOAD_BEST_PRICE",
}
`;

exports[`containers/DexPage/actions/loadBuyCoin should loadBuyCoin should create loadBuyCoin action 1`] = `
Object {
  "payload": Object {
    "amount": 1.234,
    "basecoin": "BTC",
    "paymentcoin": "KMD",
  },
  "type": "atomicapp/DexPage/LOAD_BUY_COIN",
}
`;

exports[`containers/DexPage/actions/loadBuyCoinError should loadBuyCoin should create loadBuyCoinError action 1`] = `
Object {
  "error": Object {
    "message": "Value is large than balance",
  },
  "type": "atomicapp/DexPage/LOAD_BUY_COIN_ERROR",
}
`;

exports[`containers/DexPage/actions/loadPrice should loadPrice should create loadPrice action 1`] = `
Object {
  "payload": Object {
    "coin": "coin",
  },
  "type": "atomicapp/DexPage/LOAD_PRICE",
}
`;

exports[`containers/DexPage/actions/loadPrices should loadPrices should create loadPrices action 1`] = `
Object {
  "type": "atomicapp/DexPage/LOAD_PRICES",
}
`;

exports[`containers/DexPage/actions/loadPricesSuccess should loadPricesSuccess should create loadPricesSuccess action 1`] = `
Object {
  "type": "atomicapp/DexPage/LOAD_PRICES_SUCCESS",
}
`;

exports[`containers/DexPage/actions/makeANewSwap should makeANewSwap should create makeANewSwap action 1`] = `
Object {
  "type": "atomicapp/DexPage/SWAP_MAKE_A_NEW",
}
`;

exports[`containers/DexPage/actions/openDetailModal should openDetailModal should create openDetailModal action 1`] = `
Object {
  "payload": Object {
    "uuid": undefined,
  },
  "type": "atomicapp/DexPage/SWAP_DETAIL_MODAL_OPEN",
}
`;

exports[`containers/DexPage/actions/openDetailModal should openDetailModal should create openDetailModal action 2`] = `
Object {
  "payload": Object {
    "uuid": "uuid",
  },
  "type": "atomicapp/DexPage/SWAP_DETAIL_MODAL_OPEN",
}
`;

exports[`containers/DexPage/actions/openJoyride should openJoyride should create openJoyride action 1`] = `
Object {
  "type": "atomicapp/DexPage/JOYRIDE_OPEN",
}
`;

exports[`containers/DexPage/actions/timeoutSwap should timeoutSwap should create timeoutSwap action 1`] = `
Object {
  "payload": Object {
    "alice": "BEER",
    "bob": "COQUI",
    "id": 3624682363,
    "quoteid": 0,
    "requestid": 0,
    "uuid": "bc5e1509b2aea898b8dff71ecc3fa7d5bc7c361fb14187fe9bc06916fae63811",
  },
  "type": "atomicapp/DexPage/SWAP_TIMEOUT",
}
`;

exports[`containers/OrderPage/actions/loadOrderbook should loadOrderbook should create loadOrderbook action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/ORDERBOOK_LOAD",
}
`;

exports[`containers/OrderPage/actions/loadOrderbookError should loadOrderbookError should create loadOrderbookError action 1`] = `
Object {
  "error": Object {
    "context": Object {
      "action": "atomicapp/OrdersPage/ORDERBOOK_LOAD",
    },
    "message": "message",
    "type": "RPC",
  },
  "type": "atomicapp/OrdersPage/ORDERBOOK_LOAD_ERROR",
}
`;

exports[`containers/OrderPage/actions/loadOrderbookSuccess should loadOrderbookSuccess should create loadOrderbookSuccess action 1`] = `
Object {
  "payload": Object {
    "askdepth": 0,
    "asks": Array [
      Object {
        "address": "RT9MpMyucqXiX8bZLimXBnrrn2ofmdGNKd",
        "age": 9,
        "avevolume": 0,
        "coin": "KMD",
        "depth": 0,
        "maxvolume": 36.40686108,
        "numutxos": 0,
        "price": 0.0001566,
        "pubkey": "bab6ad2eebe1e666369cab504d4622b22c1f1ef718ef388e88020f30a1573e01",
        "zcredits": 0,
      },
    ],
    "base": "KMD",
    "biddepth": 0,
    "bids": Array [
      Object {
        "address": "1JsAjr6d21j9T8EMsYnQ6GXf1mM523JAv1",
        "age": 9,
        "avevolume": 0,
        "coin": "BTC",
        "depth": 0,
        "maxvolume": 0.02620853,
        "numutxos": 0,
        "price": 0.00015473,
        "pubkey": "bab6ad2eebe1e666369cab504d4622b22c1f1ef718ef388e88020f30a1573e01",
        "zcredits": 0,
      },
    ],
    "netid": 9999,
    "numasks": 1,
    "numbids": 1,
    "rel": "BTC",
    "timestamp": 1558682258,
  },
  "type": "atomicapp/OrdersPage/ORDERBOOK_LOAD_SUCCESS",
}
`;

exports[`containers/OrderPage/actions/skipOrderbook should skipOrderbook should create skipOrderbook action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/ORDERBOOK_LOAD_SKIP",
}
`;

exports[`containers/OrdersPage/actions/closeConfirmNewOrderModal should closeConfirmNewOrderModal should create closeConfirmNewOrderModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/CONFIRM_NEW_ORDER_MODAL_CLOSE",
}
`;

exports[`containers/OrdersPage/actions/closeDepositCoinModal should closeDepositCoinModal should create closeDepositCoinModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/DEPOSIT_COIN_MODAL_CLOSE",
}
`;

exports[`containers/OrdersPage/actions/closeRecevieCoinModal should closeRecevieCoinModal should create closeRecevieCoinModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/RECEVIE_COIN_MODAL_CLOSE",
}
`;

exports[`containers/OrdersPage/actions/openConfirmNewOrderModal should openConfirmNewOrderModal should create openConfirmNewOrderModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/CONFIRM_NEW_ORDER_MODAL_OPEN",
}
`;

exports[`containers/OrdersPage/actions/openDepositCoinModal should openDepositCoinModal should create openDepositCoinModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/DEPOSIT_COIN_MODAL_OPEN",
}
`;

exports[`containers/OrdersPage/actions/openRecevieCoinModal should openRecevieCoinModal should create openRecevieCoinModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/RECEVIE_COIN_MODAL_OPEN",
}
`;

exports[`containers/OrdersPage/actions/setNewOrder should setNewOrder should create setNewOrder action 1`] = `
Object {
  "payload": Object {
    "price": 0.1,
  },
  "type": "atomicapp/OrdersPage/NEW_ORDER_SET",
}
`;

exports[`containers/OrdersPage/actions/setNewOrderError should setNewOrderError should create setNewOrderError action 1`] = `
Object {
  "error": undefined,
  "type": "atomicapp/OrdersPage/NEW_ORDER_SET_ERROR",
}
`;

exports[`containers/OrdersPage/actions/setNewOrderSuccess should setNewOrderSuccess should create setNewOrderSuccess action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/NEW_ORDER_SET_SUCCESS",
}
`;

exports[`containers/OrdersPage/actions/skipNewOrder should skipNewOrder should create skipNewOrder action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/NEW_ORDER_SET_SKIP",
}
`;
